Fixed font causing layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,21 +2,25 @@
   font-family: "Inter";
   src: url(/fonts/Inter-Regular.ttf);
   font-weight: 400;
+  font-display: optional;
 }
 @font-face {
   font-family: "Inter";
   src: url(/fonts/Inter-Medium.ttf);
   font-weight: 500;
+  font-display: optional;
 }
 @font-face {
   font-family: "Inter";
   src: url(/fonts/Inter-SemiBold.ttf);
   font-weight: 600;
+  font-display: optional;
 }
 @font-face {
   font-family: "Inter";
   src: url(/fonts/Inter-Bold.ttf);
   font-weight: 700;
+  font-display: optional;
 }
 
 * {
